--- a/generators/docker/templates/docker/realm-config/trinity-realm.json.ejs
+++ b/generators/docker/templates/docker/realm-config/trinity-realm.json.ejs
@@ -1,8 +1,8 @@
 {
-  "id": "jhipster",
-  "realm": "jhipster",
-  "displayName": "JHipster",
-  "displayNameHtml": "<div class=\"kc-logo-text\"><span>JHipster</span></div>",
+  "id": "trinity",
+  "realm": "trinity",
+  "displayName": "Trinity",
+  "displayNameHtml": "<div class=\"kc-logo-text\"><span>Trinity</span></div>",
   "notBefore": 0,
   "defaultSignatureAlgorithm": "RS256",
   "revokeRefreshToken": false,
@@ -50,10 +50,10 @@
       {
         "id": "8e986fb5-dafb-43bf-a7c2-7e57572d3d80",
         "name": "ROLE_ADMIN",
-        "description": "Jhipster administrator role",
+        "description": "Administrator role",
         "composite": false,
         "clientRole": false,
-        "containerId": "jhipster",
+        "containerId": "trinity",
         "attributes": {}
       },
       {
@@ -62,21 +62,21 @@
         "description": "${role_offline-access}",
         "composite": false,
         "clientRole": false,
-        "containerId": "jhipster",
+        "containerId": "trinity",
         "attributes": {}
       },
       {
         "id": "ec5705e1-fc1d-4d21-8364-abd3bd4efcd0",
         "name": "ROLE_USER",
-        "description": "Jhipster user role",
+        "description": "User role",
         "composite": false,
         "clientRole": false,
-        "containerId": "jhipster",
+        "containerId": "trinity",
         "attributes": {}
       },
       {
         "id": "d2b73e7b-a2d7-40e9-8ebc-2af00454e8aa",
-        "name": "default-roles-jhipster",
+        "name": "default-roles-trinity",
         "description": "${role_default-roles}",
         "composite": true,
         "composites": {
@@ -92,7 +92,7 @@
           }
         },
         "clientRole": false,
-        "containerId": "jhipster",
+        "containerId": "trinity",
         "attributes": {}
       },
       {
@@ -101,12 +101,12 @@
         "description": "${role_uma_authorization}",
         "composite": false,
         "clientRole": false,
-        "containerId": "jhipster",
+        "containerId": "trinity",
         "attributes": {}
       }
     ],
     "client": {
-<%_ if (includesApplicationTypeGateway) { _%>
+<%_ if (applicationTypeGateway) { _%>
       "internal": [],
 <%_ } _%>
       "realm-management": [
@@ -321,12 +321,12 @@
           "attributes": {}
         }
       ],
-      "jhipster-control-center": [],
+      "trinity-control-center": [],
       "security-admin-console": [],
       "web_app": [],
       "admin-cli": [],
       "account-console": [],<% if (serviceDiscoveryEureka) { %>
-      "jhipster-registry": [],<% } %>
+      "trinity-registry": [],<% } %>
       "broker": [
         {
           "id": "5b08a930-9f1d-4030-ae75-92c1e4c9352c",
@@ -454,11 +454,11 @@
   ],
   "defaultRole": {
     "id": "d2b73e7b-a2d7-40e9-8ebc-2af00454e8aa",
-    "name": "default-roles-jhipster",
+    "name": "default-roles-trinity",
     "description": "${role_default-roles}",
     "composite": true,
     "clientRole": false,
-    "containerId": "jhipster"
+    "containerId": "trinity"
   },
   "requiredCredentials": [
     "password"
@@ -517,7 +517,7 @@
       "disableableCredentialTypes": [],
       "requiredActions": [],
       "realmRoles": [
-        "default-roles-jhipster"
+        "default-roles-trinity"
       ],
       "notBefore": 0,
       "groups": []
@@ -548,14 +548,14 @@
       "clientId": "account",
       "name": "${client_account}",
       "rootUrl": "${authBaseUrl}",
-      "baseUrl": "/realms/jhipster/account/",
+      "baseUrl": "/realms/trinity/account/",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
       "secret": "<%= keycloakSecrets[0] %>",
       "redirectUris": [
-        "/realms/jhipster/account/*"
+        "/realms/trinity/account/*"
       ],
       "webOrigins": [],
       "notBefore": 0,
@@ -593,14 +593,14 @@
       "clientId": "account-console",
       "name": "${client_account-console}",
       "rootUrl": "${authBaseUrl}",
-      "baseUrl": "/realms/jhipster/account/",
+      "baseUrl": "/realms/trinity/account/",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
       "secret": "<%= keycloakSecrets[1] %>",
       "redirectUris": [
-        "/realms/jhipster/account/*"
+        "/realms/trinity/account/*"
       ],
       "webOrigins": [],
       "notBefore": 0,
@@ -726,7 +726,7 @@
         "microprofile-jwt"
       ]
     },
-<%_ if (includesApplicationTypeGateway) { _%>
+<%_ if (applicationTypeGateway) { _%>
     {
       "id": "10e6ea34-9f1e-49ef-8e28-7eb851459694",
       "clientId": "internal",
@@ -830,14 +830,14 @@
 <%_ } _%>
     {
       "id": "1acf7ad0-68cb-46a6-a3e4-8b2f2abecb85",
-      "clientId": "jhipster-control-center",
+      "clientId": "trinity-control-center",
       "rootUrl": "http://localhost:7419",
       "adminUrl": "http://localhost:7419",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
-      "secret": "jhipster-control-center",
+      "secret": "trinity-control-center",
       "redirectUris": [
         "dev.localhost.ionic:*",
         "http://127.0.0.1:*",
@@ -880,7 +880,7 @@
       "defaultClientScopes": [
         "web-origins",
         "acr",
-        "jhipster",
+        "trinity",
         "roles",
         "profile",
         "email"
@@ -894,14 +894,14 @@
     },<% if (serviceDiscoveryEureka) { %>
     {
       "id": "9057870f-8775-448d-a194-1d4e122f44d5",
-      "clientId": "jhipster-registry",
+      "clientId": "trinity-registry",
       "rootUrl": "http://localhost:8761",
       "adminUrl": "http://localhost:8761",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
-      "secret": "jhipster-registry",
+      "secret": "trinity-registry",
       "redirectUris": [
         "http://127.0.0.1:8761/*",
         "http://localhost:8761/*"
@@ -942,7 +942,7 @@
       "defaultClientScopes": [
         "web-origins",
         "acr",
-        "jhipster",
+        "trinity",
         "roles",
         "profile",
         "email"
@@ -1000,14 +1000,14 @@
       "clientId": "security-admin-console",
       "name": "${client_security-admin-console}",
       "rootUrl": "${authAdminUrl}",
-      "baseUrl": "/admin/jhipster/console/",
+      "baseUrl": "/admin/trinity/console/",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
       "secret": "<%= keycloakSecrets[5] %>",
       "redirectUris": [
-        "/admin/jhipster/console/*"
+        "/admin/trinity/console/*"
       ],
       "webOrigins": [
         "+"
@@ -1063,25 +1063,23 @@
     {
       "id": "6e8deddb-b4d6-4e2e-b389-b397d3f74fcd",
       "clientId": "web_app",
-      "rootUrl": "http://localhost:<%= entryPort %>",
-      "adminUrl": "http://localhost:<%= entryPort %>",
+      "rootUrl": "http://localhost:<%= serverPort %>",
+      "adminUrl": "http://localhost:<%= serverPort %>",
       "surrogateAuthRequired": false,
       "enabled": true,
       "alwaysDisplayInConsole": false,
       "clientAuthenticatorType": "client-secret",
       "secret": "web_app",
       "redirectUris": [
-        <%- keycloakRedirectUris %>
-        "http://localhost:8100/*",
-        "http://127.0.0.1:8761/*",
-        "http://localhost:9000/*",
-        "dev.localhost.ionic:*"
+        "dev.localhost.ionic:*",
+        "http://127.0.0.1:*",
+        "http://localhost:*",
+        "https://127.0.0.1:*",
+        "https://localhost:*",
+        "https://oauth.pstmn.io/v1/callback"
       ],
       "webOrigins": [
-        <%- keycloakRedirectUris.replace(/\/\*/g, "") %>
-        "http://localhost:8100",
-        "http://127.0.0.1:8761",
-        "http://localhost:9000"
+        "*"
       ],
       "notBefore": 0,
       "bearerOnly": false,
@@ -1115,7 +1113,7 @@
       "defaultClientScopes": [
         "web-origins",
         "acr",
-        "jhipster",
+        "trinity",
         "roles",
         "profile",
         "email"
@@ -1205,8 +1203,8 @@
     },
     {
       "id": "9816de82-24b7-42fe-a85a-1264868ec293",
-      "name": "jhipster",
-      "description": "Jhipster specific claims",
+      "name": "trinity",
+      "description": "Trinity specific claims",
       "protocol": "openid-connect",
       "attributes": {
         "include.in.token.scope": "false",
