--- a/generators/kubernetes/templates/keycloak/keycloak-configmap.yml.ejs
+++ b/generators/kubernetes/templates/keycloak/keycloak-configmap.yml.ejs
@@ -57,7 +57,7 @@ data:
           {
             "id": "8e986fb5-dafb-43bf-a7c2-7e57572d3d80",
             "name": "ROLE_ADMIN",
-            "description": "Jhipster administrator role",
+            "description": "Administrator role",
             "composite": false,
             "clientRole": false,
             "containerId": "jhipster",
@@ -75,7 +75,7 @@ data:
           {
             "id": "ec5705e1-fc1d-4d21-8364-abd3bd4efcd0",
             "name": "ROLE_USER",
-            "description": "Jhipster user role",
+            "description": "User role",
             "composite": false,
             "clientRole": false,
             "containerId": "jhipster",
@@ -1169,7 +1169,7 @@ data:
         {
           "id": "9816de82-24b7-42fe-a85a-1264868ec293",
           "name": "jhipster",
-          "description": "Jhipster specific claims",
+          "description": "Trinity specific claims",
           "protocol": "openid-connect",
           "attributes": {
             "include.in.token.scope": "false",
