--- a/generators/server/templates/README.md.jhi.spring-boot.ejs
+++ b/generators/server/templates/README.md.jhi.spring-boot.ejs
@@ -23,11 +23,11 @@
 <&_ if (fragment.introSection) { -&>
   <%_ if (applicationTypeGateway || applicationTypeMicroservice) { _%>
 
-This is a "<%= applicationType %>" application intended to be part of a microservice architecture, please refer to the [Doing microservices with JHipster][] page of the documentation for more information.
+This is a "<%= applicationType %>" application intended to be part of a microservice architecture, please refer to the [Doing microservices with Trinity Platform][] page of the documentation for more information.
   <%_ } _%>
   <%_ if (serviceDiscoveryAny) { _%>
 
-This application is configured for Service Discovery and Configuration with <% if (serviceDiscoveryEureka) { %>the JHipster-Registry<% } %><% if (serviceDiscoveryConsul) { %>Consul<% } %>. On launch, it will refuse to start if it is not able to connect to <% if (serviceDiscoveryEureka) { %>the JHipster-Registry at [http://localhost:8761](http://localhost:8761)<% } %><% if (serviceDiscoveryConsul) { %>Consul at [http://localhost:8500](http://localhost:8500)<% } %>.<% if (serviceDiscoveryEureka) { %> For more information, read our documentation on [Service Discovery and Configuration with the JHipster-Registry][].<% } %><% if (serviceDiscoveryConsul) { %> For more information, read our documentation on [Service Discovery and Configuration with Consul][].<% } %>
+This application is configured for Service Discovery and Configuration with <% if (serviceDiscoveryEureka) { %>the Trinity-Registry<% } %><% if (serviceDiscoveryConsul) { %>Consul<% } %>. On launch, it will refuse to start if it is not able to connect to <% if (serviceDiscoveryEureka) { %>the Trinity-Registry at [http://localhost:8761](http://localhost:8761)<% } %><% if (serviceDiscoveryConsul) { %>Consul at [http://localhost:8500](http://localhost:8500)<% } %>.<% if (serviceDiscoveryEureka) { %> For more information, read our documentation on [Service Discovery and Configuration with the Trinity-Registry][].<% } %><% if (serviceDiscoveryConsul) { %> For more information, read our documentation on [Service Discovery and Configuration with Consul][].<% } %>
   <%_ } _%>
 
 <&_ } -&>
@@ -35,20 +35,20 @@ This application is configured for Service Discovery and Configuration with <% i
 <&_ if (fragment.structureSection) { -&>
 Node is required for generation and recommended for development. `package.json` is always generated for a better development experience with prettier, commit hooks, scripts and so on.
 
-In the project root, JHipster generates configuration files for tools like git, prettier, eslint, husky, and others that are well known and you can find references in the web.
+In the project root, Trinity generates configuration files for tools like git, prettier, eslint, husky, and others that are well known and you can find references in the web.
 
   <%_ if (backendTypeJavaAny) { %>
 `/src/*` structure follows default <%= backendType %> structure.
 
   <%_ } _%>
 - `.yo-rc.json` - Yeoman configuration file
-JHipster configuration is stored in this file at `generator-jhipster` key. You may find `generator-jhipster-*` for specific blueprints configuration.
+Trinity Platform configuration is stored in this file at `generator-jhipster` key. You may find `generator-jhipster-*` for specific blueprints configuration.
 - `.yo-resolve` (optional) - Yeoman conflict resolver
 Allows to use a specific action when conflicts are found skipping prompts for files that matches a pattern. Each line should match `[pattern] [action]` with pattern been a [Minimatch](https://github.com/isaacs/minimatch#minimatch) pattern and action been one of skip (default if omitted) or force. Lines starting with `#` are considered comments and are ignored.
-- `.jhipster/*.json` - JHipster entity configuration files
+- `.jhipster/*.json` - Trinity entity configuration files
   <%_ if (!skipClient) { %>
 - `npmw` - wrapper to use locally installed npm.
-JHipster installs Node and npm locally using the build tool by default. This wrapper makes sure npm is installed locally and uses it avoiding some differences different versions can cause. By using `./npmw` instead of the traditional `npm` you can configure a Node-less environment to develop or test your application.
+Trinity Platform installs Node and npm locally using the build tool by default. This wrapper makes sure npm is installed locally and uses it avoiding some differences different versions can cause. By using `./npmw` instead of the traditional `npm` you can configure a Node-less environment to develop or test your application.
   <%_ } _%>
 - `/src/main/docker` - Docker configurations for the application and services that the application depends on
 
@@ -62,15 +62,15 @@ To start your application in the dev profile, run:
 <% if (buildToolMaven) { %>./mvnw<% } %><% if (buildToolGradle) { %>./gradlew<% } %>
 ```
 
-For further instructions on how to develop with JHipster, have a look at [Using JHipster in development][].
+For further instructions on how to develop with Trinity, have a look at [Using Trinity in development][].
 
   <%_ } _%>
 <%_ if (authenticationTypeOauth2) { -%>
 ### OAuth 2.0 / OpenID Connect
 
-Congratulations! You've selected an excellent way to secure your JHipster application. If you're not sure what OAuth and OpenID Connect (OIDC) are, please see [What the Heck is OAuth?](https://developer.okta.com/blog/2017/06/21/what-the-heck-is-oauth)
+Congratulations! You've selected an excellent way to secure your Trinity application. If you're not sure what OAuth and OpenID Connect (OIDC) are, please see [What the Heck is OAuth?](https://developer.okta.com/blog/2017/06/21/what-the-heck-is-oauth)
 
-To log in to your app, you'll need to have [Keycloak](https://keycloak.org) up and running. The JHipster Team has created a Docker container for you that has the default users and roles. Start Keycloak using the following command.
+To log in to your app, you'll need to have [Keycloak](https://keycloak.org) up and running. The Trinity Team has created a Docker container for you that has the default users and roles. Start Keycloak using the following command.
 
 ```
 docker compose -f src/main/docker/keycloak.yml up
@@ -86,7 +86,7 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://localhost:9080/realms/jhipster
+            issuer-uri: http://localhost:9080/realms/trinity
         registration:
           oidc:
             client-id: web_app
@@ -110,7 +110,7 @@ If you'd like to use Okta instead of Keycloak, it's pretty quick using the [Okta
 okta register
 ```
 
-Then, in your JHipster app's directory, run `okta apps create` and select **JHipster**. This will set up an Okta app for you, create `ROLE_ADMIN` and `ROLE_USER` groups, create a `.okta.env` file with your Okta settings, and configure a `groups` claim in your ID token.
+Then, in your Trinity app's directory, run `okta apps create` and select **Trinity**. This will set up an Okta app for you, create `ROLE_ADMIN` and `ROLE_USER` groups, create a `.okta.env` file with your Okta settings, and configure a `groups` claim in your ID token.
 
 Run `source .okta.env` and start your app with Maven or Gradle. You should be able to sign in with the credentials you registered with.
 
@@ -144,7 +144,7 @@ Create a `ROLE_ADMIN` and `ROLE_USER` group and add users into them. Modify e2e 
 
 Navigate to **API** > **Authorization Servers**, click the **Authorization Servers** tab and edit the default one. Click the **Claims** tab and **Add Claim**. Name it "groups", and include it in the ID Token. Set the value type to "Groups" and set the filter to be a Regex of `.*`.
 
-After making these changes, you should be good to go! If you have any issues, please post them to [Stack Overflow](https://stackoverflow.com/questions/tagged/jhipster). Make sure to tag your question with "jhipster" and "okta".
+After making these changes, you should be good to go!
 
 ### Auth0
 
@@ -156,7 +156,7 @@ If you'd like to use [Auth0](https://auth0.com/) instead of Keycloak, follow the
     - Allowed Logout URLs: `http://localhost:8080/`
 - Navigate to **User Management** > **Roles** and create new roles named `ROLE_ADMIN`, and `ROLE_USER`.
 - Navigate to **User Management** > **Users** and create a new user account. Click on the **Role** tab to assign roles to the newly created user account.
-- Navigate to **Auth Pipeline** > **Rules** and create a new Rule. Choose `Empty rule` template. Provide a meaningful name like `JHipster claims` and replace `Script` content with the following and Save.
+- Navigate to **Auth Pipeline** > **Rules** and create a new Rule. Choose `Empty rule` template. Provide a meaningful name like `Trinity claims` and replace `Script` content with the following and Save.
 ```javascript
 function (user, context, callback) {
   user.preferred_username = user.email;
@@ -179,7 +179,7 @@ function (user, context, callback) {
   callback(null, user, context);
 }
 ```
-- In your `JHipster` application, modify `src/main/resources/config/application.yml` to use your Auth0 application settings:
+- In your `Trinity` application, modify `src/main/resources/config/application.yml` to use your Auth0 application settings:
 ```yaml
 spring:
   ...
@@ -285,7 +285,7 @@ java -jar build/libs/*.jar
 
 <% if (!skipClient) { %>Then navigate to [http://localhost:<%= serverPort %>](http://localhost:<%= serverPort %>) in your browser.
 <% } %>
-Refer to [Using JHipster in production][] for more details.
+Refer to [Using Trinity in production][] for more details.
 
 ### Packaging as war
 
@@ -300,9 +300,9 @@ To package your application as a war in order to deploy it to an application ser
 <%_ } _%>
 ```
 
-### JHipster Control Center
+### Trinity Control Center
 
-JHipster Control Center can help you manage and control your application(s). You can start a local control center server (accessible on http://localhost:7419) with:
+Trinity Control Center can help you manage and control your application(s). You can start a local control center server (accessible on http://localhost:7419) with:
 
 ```
 docker compose -f src/main/docker/jhipster-control-center.yml up
@@ -353,7 +353,7 @@ For more information, refer to the [Code quality page][].
 
 ### Using Docker to simplify development (optional)
 
-You can use Docker to improve your JHipster development experience. A number of docker-compose configuration are available in the [src/main/docker](src/main/docker) folder to launch required third party services.
+You can use Docker to improve your Trinity development experience. A number of docker-compose configuration are available in the [src/main/docker](src/main/docker) folder to launch required third party services.
 
 <%_ if (!databaseTypeNo) { _%>
 For example, to start a <%= prodDatabaseType %> database in a docker container, run:
@@ -390,11 +390,11 @@ docker compose -f <%- dockerServicesDir %>app.yml up -d
 
 When running Docker Desktop on MacOS Big Sur or later, consider enabling experimental `Use the new Virtualization framework` for better processing performance ([disk access performance is worse](https://github.com/docker/roadmap/issues/7)).
 
-For more information refer to [Using Docker and Docker-Compose][], this page also contains information on the docker-compose sub-generator (`jhipster docker-compose`), which is able to generate docker configurations for one or several JHipster applications.
+For more information refer to [Using Docker and Docker-Compose][], this page also contains information on the docker-compose sub-generator, which is able to generate docker configurations for one or several Trinity applications.
 
 ## Continuous Integration (optional)
 
-To configure CI for your project, run the ci-cd sub-generator (`jhipster ci-cd`), this will let you generate configuration files for a number of Continuous Integration systems. Consult the [Setting up Continuous Integration][] page for more information.
+To configure CI for your project, run the ci-cd sub-generator, this will let you generate configuration files for a number of Continuous Integration systems. Consult the [Setting up Continuous Integration][] page for more information.
 
 <&_ } -&>
 
