--- a/generators/angular/templates/src/main/webapp/app/core/util/alert.service.spec.ts.ejs
+++ b/generators/angular/templates/src/main/webapp/app/core/util/alert.service.spec.ts.ejs
@@ -53,7 +53,7 @@ describe('Alert service test', () => {
       expect(
         service.addAlert({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
           timeout: 3000,
           toast: true,
           position: 'top left',
@@ -61,7 +61,7 @@ describe('Alert service test', () => {
       ).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
           id: 0,
           timeout: 3000,
           toast: true,
@@ -73,7 +73,7 @@ describe('Alert service test', () => {
       expect(service.get()[0]).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
           id: 0,
           timeout: 3000,
           toast: true,
@@ -89,7 +89,7 @@ describe('Alert service test', () => {
           service.addAlert(
             {
               type: 'success',
-              message: 'Hello Jhipster',
+              message: 'Hello Trinity',
               timeout: 3000,
               toast: true,
               position: 'top left',
@@ -99,7 +99,7 @@ describe('Alert service test', () => {
         ).toEqual(
           expect.objectContaining({
             type: 'success',
-            message: 'Hello Jhipster',
+            message: 'Hello Trinity',
             id: 0,
             timeout: 3000,
             toast: true,
@@ -111,7 +111,7 @@ describe('Alert service test', () => {
         expect(extAlerts[0]).toEqual(
           expect.objectContaining({
             type: 'success',
-            message: 'Hello Jhipster',
+            message: 'Hello Trinity',
             id: 0,
             timeout: 3000,
             toast: true,
@@ -122,11 +122,11 @@ describe('Alert service test', () => {
     ));
 
     it('should produce an alert object with correct id', inject([AlertService], (service: AlertService) => {
-      service.addAlert({ type: 'info', message: 'Hello Jhipster info' });
-      expect(service.addAlert({ type: 'success', message: 'Hello Jhipster success' })).toEqual(
+      service.addAlert({ type: 'info', message: 'Hello Trinity info' });
+      expect(service.addAlert({ type: 'success', message: 'Hello Trinity success' })).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster success',
+          message: 'Hello Trinity success',
           id: 1,
         } as Alert)
       );
@@ -135,20 +135,20 @@ describe('Alert service test', () => {
       expect(service.get()[1]).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster success',
+          message: 'Hello Trinity success',
           id: 1,
         } as Alert)
       );
     }));
 
     it('should close an alert correctly', inject([AlertService], (service: AlertService) => {
-      const alert0 = service.addAlert({ type: 'info', message: 'Hello Jhipster info' });
-      const alert1 = service.addAlert({ type: 'info', message: 'Hello Jhipster info 2' });
-      const alert2 = service.addAlert({ type: 'success', message: 'Hello Jhipster success' });
+      const alert0 = service.addAlert({ type: 'info', message: 'Hello Trinity info' });
+      const alert1 = service.addAlert({ type: 'info', message: 'Hello Trinity info 2' });
+      const alert2 = service.addAlert({ type: 'success', message: 'Hello Trinity success' });
       expect(alert2).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster success',
+          message: 'Hello Trinity success',
           id: 2,
         } as Alert)
       );
@@ -159,7 +159,7 @@ describe('Alert service test', () => {
       expect(service.get()[1]).not.toEqual(
         expect.objectContaining({
           type: 'info',
-          message: 'Hello Jhipster info 2',
+          message: 'Hello Trinity info 2',
           id: 1,
         } as Alert)
       );
@@ -168,7 +168,7 @@ describe('Alert service test', () => {
       expect(service.get()[0]).not.toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster success',
+          message: 'Hello Trinity success',
           id: 2,
         } as Alert)
       );
@@ -177,7 +177,7 @@ describe('Alert service test', () => {
     }));
 
     it('should close an alert on timeout correctly', inject([AlertService], (service: AlertService) => {
-      service.addAlert({ type: 'info', message: 'Hello Jhipster info' });
+      service.addAlert({ type: 'info', message: 'Hello Trinity info' });
 
       expect(service.get().length).toBe(1);
 
@@ -187,9 +187,9 @@ describe('Alert service test', () => {
     }));
 
     it('should clear alerts', inject([AlertService], (service: AlertService) => {
-      service.addAlert({ type: 'info', message: 'Hello Jhipster info' });
-      service.addAlert({ type: 'danger', message: 'Hello Jhipster info' });
-      service.addAlert({ type: 'success', message: 'Hello Jhipster info' });
+      service.addAlert({ type: 'info', message: 'Hello Trinity info' });
+      service.addAlert({ type: 'danger', message: 'Hello Trinity info' });
+      service.addAlert({ type: 'success', message: 'Hello Trinity info' });
       expect(service.get().length).toBe(3);
       service.clear();
       expect(service.get().length).toBe(0);
@@ -200,7 +200,7 @@ describe('Alert service test', () => {
         service.addAlert(
           {
             type: 'success',
-            message: 'Hello Jhipster',
+            message: 'Hello Trinity',
             timeout: 3000,
             toast: true,
             position: 'top left',
@@ -210,7 +210,7 @@ describe('Alert service test', () => {
       ).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
           id: 0,
           timeout: 3000,
           toast: true,
@@ -222,47 +222,47 @@ describe('Alert service test', () => {
     }));
 
     it('should produce a success message', inject([AlertService], (service: AlertService) => {
-      expect(service.addAlert({ type: 'success', message: 'Hello Jhipster' })).toEqual(
+      expect(service.addAlert({ type: 'success', message: 'Hello Trinity' })).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
         } as Alert)
       );
     }));
 
     it('should produce a success message with custom position', inject([AlertService], (service: AlertService) => {
-      expect(service.addAlert({ type: 'success', message: 'Hello Jhipster', position: 'bottom left' })).toEqual(
+      expect(service.addAlert({ type: 'success', message: 'Hello Trinity', position: 'bottom left' })).toEqual(
         expect.objectContaining({
           type: 'success',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
           position: 'bottom left',
         } as Alert)
       );
     }));
 
     it('should produce a error message', inject([AlertService], (service: AlertService) => {
-      expect(service.addAlert({ type: 'danger', message: 'Hello Jhipster' })).toEqual(
+      expect(service.addAlert({ type: 'danger', message: 'Hello Trinity' })).toEqual(
         expect.objectContaining({
           type: 'danger',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
         } as Alert)
       );
     }));
 
     it('should produce a warning message', inject([AlertService], (service: AlertService) => {
-      expect(service.addAlert({ type: 'warning', message: 'Hello Jhipster' })).toEqual(
+      expect(service.addAlert({ type: 'warning', message: 'Hello Trinity' })).toEqual(
         expect.objectContaining({
           type: 'warning',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
         } as Alert)
       );
     }));
 
     it('should produce a info message', inject([AlertService], (service: AlertService) => {
-      expect(service.addAlert({ type: 'info', message: 'Hello Jhipster' })).toEqual(
+      expect(service.addAlert({ type: 'info', message: 'Hello Trinity' })).toEqual(
         expect.objectContaining({
           type: 'info',
-          message: 'Hello Jhipster',
+          message: 'Hello Trinity',
         } as Alert)
       );
     }));
@@ -273,9 +273,9 @@ describe('Alert service test', () => {
       [AlertService, TranslateService],
       (service: AlertService, translateService: TranslateService) => {
         translateService.setTranslation('en', {
-          'hello.jhipster': 'Translated message',
+          'hello.Trinity': 'Translated message',
         });
-        expect(service.addAlert({ type: 'info', message: 'Hello Jhipster', translationKey: 'hello.jhipster' })).toEqual(
+        expect(service.addAlert({ type: 'info', message: 'Hello Trinity', translationKey: 'hello.Trinity' })).toEqual(
           expect.objectContaining({
             type: 'info',
             message: 'Translated message',
@@ -287,10 +287,10 @@ describe('Alert service test', () => {
     it('should produce a info message with provided message if key does not exists', inject(
       [AlertService, TranslateService],
       (service: AlertService) => {
-        expect(service.addAlert({ type: 'info', message: 'Hello Jhipster', translationKey: 'hello.jhipster' })).toEqual(
+        expect(service.addAlert({ type: 'info', message: 'Hello Trinity', translationKey: 'hello.Trinity' })).toEqual(
           expect.objectContaining({
             type: 'info',
-            message: 'Hello Jhipster',
+            message: 'Hello Trinity',
           } as Alert)
         );
       }
@@ -299,10 +299,10 @@ describe('Alert service test', () => {
     it('should produce a info message with provided key if translation key does not exist in translations and message is not provided', inject(
       [AlertService, TranslateService],
       (service: AlertService) => {
-        expect(service.addAlert({ type: 'info', translationKey: 'hello.jhipster' })).toEqual(
+        expect(service.addAlert({ type: 'info', translationKey: 'hello.Trinity' })).toEqual(
           expect.objectContaining({
             type: 'info',
-            message: 'hello.jhipster',
+            message: 'hello.Trinity',
           } as Alert)
         );
       }
