--- a/generators/common/templates/README.md.jhi.ejs
+++ b/generators/common/templates/README.md.jhi.ejs
@@ -34,7 +34,7 @@
 _&>
 # <%= baseName %>
 
-This application was generated using JHipster <%= jhipsterVersion %>, you can find documentation and help at [<%= documentationArchiveUrl %>](<%= documentationArchiveUrl %>).
+This application was generated using Trinity Platform <%= jhipsterVersion %>, you can find documentation and help at [<%= documentationArchiveUrl %>](<%= documentationArchiveUrl %>).
 
 <&- fragments.introSection() &>
 ## Project Structure
@@ -56,20 +56,20 @@ This application was generated using JHipster <%= jhipsterVersion %>, you can fi
 
 <&- fragments.othersSection() &>
 <& } &>
-[JHipster Homepage and latest documentation]: <%= DOCUMENTATION_URL %>
-[JHipster <%= jhipsterVersion %> archive]: <%= documentationArchiveUrl %>
+[Trinity Platform Homepage and latest documentation]: <%= DOCUMENTATION_URL %>
+[Trinity Platform <%= jhipsterVersion %> archive]: <%= documentationArchiveUrl %>
 <%_ if (applicationTypeGateway || applicationTypeMicroservice) { _%>
-[Doing microservices with JHipster]: <%= documentationArchiveUrl %>/microservices-architecture/
+[Doing microservices with Trinity Platform]: <%= documentationArchiveUrl %>/microservices-architecture/
 <%_ } _%>
-[Using JHipster in development]: <%= documentationArchiveUrl %>/development/
+[Using Trinity Platform in development]: <%= documentationArchiveUrl %>/development/
 <%_ if (serviceDiscoveryEureka) { _%>
-[Service Discovery and Configuration with the JHipster-Registry]: <%= documentationArchiveUrl %>/microservices-architecture/#jhipster-registry
+[Service Discovery and Configuration with the Trinity Platform-Registry]: <%= documentationArchiveUrl %>/microservices-architecture/#trinity-registry
 <%_ } _%>
 <%_ if (serviceDiscoveryConsul) { _%>
 [Service Discovery and Configuration with Consul]: <%= documentationArchiveUrl %>/microservices-architecture/#consul
 <%_ } _%>
 [Using Docker and Docker-Compose]: <%= documentationArchiveUrl %>/docker-compose
-[Using JHipster in production]: <%= documentationArchiveUrl %>/production/
+[Using Trinity Platform in production]: <%= documentationArchiveUrl %>/production/
 [Running tests page]: <%= documentationArchiveUrl %>/running-tests/
 [Code quality page]: <%= documentationArchiveUrl %>/code-quality/
 [Setting up Continuous Integration]: <%= documentationArchiveUrl %>/setting-up-ci/
