--- a/generators/docker/templates/docker/prometheus/prometheus.yml.ejs
+++ b/generators/docker/templates/docker/prometheus/prometheus.yml.ejs
@@ -16,7 +16,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -%>
-# Sample global config for monitoring JHipster applications
+# Sample global config for monitoring Trinity applications
 global:
   scrape_interval:     15s # By default, scrape targets every 15 seconds.
   evaluation_interval: 15s # By default, scrape targets every 15 seconds.
@@ -25,7 +25,7 @@ global:
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-    monitor: 'jhipster'
+    monitor: 'trinity'
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
@@ -38,7 +38,7 @@ scrape_configs:
 
     # scheme defaults to 'http' enable https in case your application is server via https
     #scheme: https
-    # basic auth is not needed by default. See https://www.jhipster.tech/monitoring/#configuring-metrics-forwarding for details
+    # basic auth is not needed by default.
     #basic_auth:
     # username: admin
     # password: admin
