--- a/generators/server/templates/src/main/java/_package_/Application.java.ejs
+++ b/generators/server/templates/src/main/java/_package_/Application.java.ejs
@@ -59,7 +59,7 @@ public class <%= mainClass %> {
      * <p>
      * Spring profiles can be configured with a program argument --spring.profiles.active=your-active-profile
      * <p>
-     * You can find more information on how profiles work with JHipster on <a href="https://www.jhipster.tech/profiles/">https://www.jhipster.tech/profiles/</a>.
+     * You can find more information on how profiles work with Trinity Platform on <a href="https://www.trinity-technology.com/">https://www.trinity-technology.com/</a>.
      */
     @PostConstruct
     public void initApplication() {
