--- a/generators/server/templates/src/main/java/_package_/config/CRLFLogConverter.java.ejs
+++ b/generators/server/templates/src/main/java/_package_/config/CRLFLogConverter.java.ejs
@@ -20,7 +20,7 @@ import org.springframework.boot.ansi.AnsiStyle;
  * CRLF characters are replaced with a red colored _ character.
  *
  * @see <a href="https://owasp.org/www-community/attacks/Log_Injection">Log Forging Description</a>
- * @see <a href="https://github.com/jhipster/generator-jhipster/issues/14949">JHipster issue</a>
+ * @see <a href="https://github.com/trinitytechnology">Issue</a>
  */
 public class CRLFLogConverter extends CompositeConverter<ILoggingEvent> {
     public static final Marker CRLF_SAFE_MARKER = MarkerFactory.getMarker("CRLF_SAFE");
