--- a/generators/server/templates/src/main/java/_package_/web/rest/errors/ErrorConstants.java.ejs
+++ b/generators/server/templates/src/main/java/_package_/web/rest/errors/ErrorConstants.java.ejs
@@ -26,7 +26,7 @@ public final class ErrorConstants {
     public static final String ERR_CONCURRENCY_FAILURE = "error.concurrencyFailure";
 <%_ } _%>
     public static final String ERR_VALIDATION = "error.validation";
-    public static final String PROBLEM_BASE_URL = "https://www.jhipster.tech/problem";
+    public static final String PROBLEM_BASE_URL = "https://www.trinity-technology.com/";
     public static final URI DEFAULT_TYPE = URI.create(PROBLEM_BASE_URL + "/problem-with-message");
     public static final URI CONSTRAINT_VIOLATION_TYPE = URI.create(PROBLEM_BASE_URL + "/constraint-violation");
 <%_ if (generateUserManagement) { _%>
