--- a/generators/server/templates/src/test/resources/config/application.yml.ejs
+++ b/generators/server/templates/src/test/resources/config/application.yml.ejs
@@ -21,8 +21,6 @@
 #
 # This configuration is used for unit/integration tests.
 #
-# More information on profiles: https://www.jhipster.tech/profiles/
-# More information on configuration properties: https://www.jhipster.tech/common-application-properties/
 # ===================================================================
 
 # ===================================================================
@@ -146,7 +144,7 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://DO_NOT_CALL:9080/realms/jhipster
+            issuer-uri: http://DO_NOT_CALL:9080/realms/trinity
       resourceserver:
         jwt:
           principal-claim-name: preferred_username
@@ -178,7 +176,7 @@ server:
   address: localhost
 
 # ===================================================================
-# JHipster specific properties
+# Trinity Platform specific properties
 #
 # Full reference is available at: https://www.jhipster.tech/common-application-properties/
 # ===================================================================
@@ -216,7 +214,7 @@ jhipster:
 # ===================================================================
 # Application specific properties
 # Add your own application properties here, see the ApplicationProperties class
-# to have type-safe configuration, like in the JHipsterProperties above
+# to have type-safe configuration, like in the TrinityProperties above
 #
 # More documentation is available at:
 # https://www.jhipster.tech/common-application-properties/
